--- a/css/backgroud.css
+++ b/css/backgroud.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url(../img/soleado-bg.jpg);
+  background-image:none;
   background-size:cover;
   background-repeat: no-repeat;
   background-position: center;
