--- a/css/info-day.css
+++ b/css/info-day.css
@@ -1,15 +1,18 @@
 main {
   background-color: var(--bg);
   padding: 1.625rem 1.125rem;
-  inline-size: 85%;
-  block-size: 15rem;
+  inline-size: 85vw;
+  block-size: auto;
   border-radius: .8rem;
-  position: relative;
-  inset-block-start: calc(100vh - 18.5rem);
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  position: relative;
+  grid-area: dataWeather;
+  align-self: center;
+  justify-self: self-start;
+  justify-self: center;
+  align-self: center;
 }
 
 main hr {
@@ -25,31 +28,29 @@ main hr {
 }
 
 .containerTime {
-  display: grid;
   column-gap: 1.5rem;
-  justify-content: start;
-  overflow-x: auto;
-  overflow-y: hidden;
-  grid-template-columns: repeat(5, auto);
-  grid-template-areas: "time time time time time" "whter whter whter whter whter";
+  display: flex;
+  justify-content: flex-start;
+  overflow: auto;
 }
 
-.containerTime::-webkit-scrollbar {
+.containerTime::-webkit-scrollbar{
   display: none;
 }
 
-.containerTime a {
-  text-decoration: none;
-}
-
-.containerTime a:focus h2 {
+.containerTime .tabDays:focus h2 {
   color: var(--primary);
   font: var(--body1-bold);
   box-shadow: inset 0px -8px 0px -5px var(--primary);
   user-select: none;
 }
 
-.containerTime h2 {
+.containerTime .tabDays {
+  background: transparent;
+  border: none;
+}
+
+.containerTime .tabDays h2 {
   color: var(--white);
   font: var(--body1-regular);
   font-size: 1rem;
@@ -59,42 +60,40 @@ main hr {
 }
 
 .containerWeather {
-  block-size: 7.5rem;
-  padding: 1rem 0 1rem 0;
-  overflow-x: auto;
-  grid-area: whter;
+  block-size: auto;
+  gap: 1rem;
+  display: none;
+  overflow: auto;
+  justify-content: flex-start;
+  padding-block-end: .6rem;
 }
 
 .containerWeather::-webkit-scrollbar {
-  display: none;
+  block-size: .2rem;
+  background: var(--bg);
 }
 
-.containerWeather {
-  padding: 0;
-  display: flex;
-  gap: 1rem;
-  margin: 0;
-  align-items: center;
+.containerWeather::-webkit-scrollbar-thumb {
+  background: var(--grey);
 }
 
-.containerWeather a {
-  display: flex;
-  flex-direction: column;
-  min-inline-size: 4.0625rem;
+.containerWeather .tabTemp {
   block-size: 7rem;
   background-color: var(--grey);
-  white-space: nowrap;
+  border-radius: 3.625rem;
   color: var(--white);
   font: var(--body2-regular);
   font-size: .75rem;
+  border: none;
+  padding: 0;
+  min-inline-size: 3.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  gap: .5rem;
-  border-radius: 3.625rem;
-  text-decoration: none;
 }
 
-.containerWeather a:focus {
+.containerWeather button:focus {
   border: 3px solid var(--primary);
 }
 
@@ -103,6 +102,7 @@ main hr {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 1rem;
+  display: none;
 }
 
 .containerDate div {
@@ -133,4 +133,16 @@ main hr {
   color: var(--white);
   font: var(--body1-bold);
   font-size: 1rem;
+}
+
+@media screen and (min-width: 800px) {
+  main {
+    inline-size: 52vw;
+  }
+  .containerWeather {
+    justify-content: center;
+  }
+  .containerTime {
+    justify-content: center;
+  }
 }
