--- a/css/info-day.css
+++ b/css/info-day.css
@@ -10,11 +10,12 @@ main {
   flex-direction: column;
   gap: 1rem;
   position: relative;
+  inset-block-start: 0;
   grid-area: dataWeather;
   align-self: center;
   justify-self: self-start;
   justify-self: center;
-  align-self: center;
+  align-self: flex-start;
   touch-action: none;
 }
 
